<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    tools:context=".gameLayout">
   <ImageView
       android:layout_width="100dp"
       android:layout_height="150dp"
       android:contentDescription="@string/rock"
       android:src="@drawable/rock"/>
    <ImageView
        android:layout_width="105dp"
        android:layout_height="150dp"
        android:contentDescription="@string/paper"
        android:src="@drawable/paper"/>
    <ImageView
        android:layout_width="105dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/scissor"
        android:src="@drawable/scissor"/>
</LinearLayout>