<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_gravity="center"
    >
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textStyle="bold"


            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/normal"
            android:textSize="30sp"
            android:onClick="dual"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/adv"
            android:textSize="30sp"
            android:onClick="comp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textStyle="italic"
        />

</LinearLayout>