<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".DualActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/p1"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/enter"
            android:id="@+id/p1name"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/p2"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/enter"
            android:textSize="20sp"
            android:id="@+id/p2name"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/rounds"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:id="@+id/nor"
            android:gravity="center"
            android:inputType="number"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/ready"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"

        android:textSize="30sp"
        android:onClick="start"/>
</LinearLayout>